--- a/.github/workflows/azure-spring-cloud.yml
+++ b/.github/workflows/azure-spring-cloud.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         action: deploy
         azure-subscription: ${{ env.SUBSCRIPTION_ID }}
-        service-name: <AZ_SPRING_APPS_NAME>
+        service-name: spring-apps-workshop-732485
         app-name: weather-service
         use-staging-deployment: false
         package: target/demo-0.0.1-SNAPSHOT.jar
