--- a/.github/workflows/azure-spring-cloud.yml
+++ b/.github/workflows/azure-spring-cloud.yml
@@ -31,5 +31,5 @@ jobs:
         azure-subscription: ${{ env.SUBSCRIPTION_ID }}
         service-name: azure-spring-apps-lab-732485
         app-name: weather-service
-        use-staging-deployment: false
+        use-staging-deployment: true
         package: target/demo-0.0.1-SNAPSHOT.jar
